--- a/src/View/Utilisateur/showCommandeClient.html.twig
+++ b/src/View/Utilisateur/showCommandeClient.html.twig
@@ -7,6 +7,8 @@
         .demo-card-square.mdl-card {
             width: 320px;
             height: 320px;
+            margin-left: 10px;
+            margin-bottom: 20px;
         }
         .demo-card-square > .mdl-card__title {
             color: #fff;
