--- a/src/View/Utilisateur/showProduitsClient.html.twig
+++ b/src/View/Utilisateur/showProduitsClient.html.twig
@@ -30,6 +30,44 @@
 
 <div class="android-content mdl-layout__content">
 <div class="android-more-section">
+
+    <div class="android-screen-section mdl-typography--text-center">
+        <a name="screens"></a>
+        <div class="mdl-typography--display-1-color-contrast">Faites votre choix !</div>
+        <div class="android-screens">
+            <div class="android-wear android-screen">
+                <a class="android-image-link" href="{{path('produit.showProduitsC')}}">
+                    <img class="android-screen-image" src="{{asset('images/tous.jpg')}}" >
+                </a>
+                <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Tous</a>
+            </div>
+            <div class="android-phone android-screen"  style="width:100px;">
+                <a class="android-image-link" href="{{path('produit.showProduitsRe')}}">
+                    <img class="android-screen-image" src="{{asset('images/restaurant.png')}}" style=" margin-left: 15px;" >
+                </a>
+                <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Restaurant</a>
+            </div>
+            <div class="android-tablet android-screen"  style="width:100px;">
+                <a class="android-image-link" href="{{path('produit.showProduitsBo')}}">
+                    <img class="android-screen-image" src="{{asset('images/icone_boulangerie_l.png')}}" >
+                </a>
+                <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Boulangerie</a>
+            </div>
+            <div class="android-tv android-screen" style="width:100px;">
+                <a class="android-image-link" href="{{path('produit.showProduitsPa')}}">
+                    <img class="android-screen-image" src="{{asset('images/patisserie.png')}}" style="max-width:100px;" >
+                </a>
+                <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Pâtisserie</a>
+            </div>
+            <div class="android-auto android-screen" style="width:100px;">
+                <a class="android-image-link" href="{{path('produit.showProduitsCC')}}">
+                    <img class="android-screen-image" src="{{asset('images/commerce.png')}}" style="max-width:100px; max-height: 100px;" >
+                </a>
+                <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase mdl-typography--text-left" href="">Centre Commercial</a>
+            </div>
+        </div>
+    </div>
+    
     <div class="android-section-title mdl-typography--display-1-color-contrast">Produits disponible</div>
     <div class="android-card-container mdl-grid">
         {% if data is empty %}
