--- a/src/View/nav_home.html.twig
+++ b/src/View/nav_home.html.twig
@@ -3,7 +3,9 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="images/android-logo.png">
+            <img class="android-logo-image" src="{{asset('images/logo.png')}}" style="
+    width: 60px;
+    height: 60px;">
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -84,6 +86,4 @@
               {% endif %}
               <div class="android-drawer-separator"></div>
           </nav>
-      </div>
-      <div class="android-content mdl-layout__content">
       </div>
