--- a/src/View/accueil.html.twig
+++ b/src/View/accueil.html.twig
@@ -15,32 +15,32 @@
           <div class="mdl-typography--display-1-color-contrast">Faites votre choix !</div>
           <div class="android-screens">
             <div class="android-wear android-screen">
-              <a class="android-image-link" href="{{path('produit.showProduitsC')}}">
+              <a class="android-image-link" href="">
                 <img class="android-screen-image" src="{{asset('images/tous.jpg')}}" >
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Tous</a>
             </div>
-            <div class="android-phone android-screen"  style="width:100px;">
-              <a class="android-image-link" href="{{path('produit.showProduitsRe')}}">
-                <img class="android-screen-image" src="{{asset('images/restaurant.png')}}" style=" margin-left: 15px;" >
+            <div class="android-phone android-screen">
+              <a class="android-image-link" href="">
+                <img class="android-screen-image" src="{{asset('images/icone-restaurant.jpg')}}" >
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Restaurant</a>
             </div>
-            <div class="android-tablet android-screen"  style="width:100px;">
-              <a class="android-image-link" href="{{path('produit.showProduitsBo')}}">
+            <div class="android-tablet android-screen">
+              <a class="android-image-link" href="">
                 <img class="android-screen-image" src="{{asset('images/icone_boulangerie_l.png')}}" >
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Boulangerie</a>
             </div>
-            <div class="android-tv android-screen" style="width:100px;">
-              <a class="android-image-link" href="{{path('produit.showProduitsPa')}}">
-                <img class="android-screen-image" src="{{asset('images/patisserie.png')}}" style="max-width:100px;" >
+            <div class="android-tv android-screen">
+              <a class="android-image-link" href="">
+                <img class="android-screen-image" src="{{asset('images/patisserie.png')}}" >
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase" href="">Pâtisserie</a>
             </div>
-            <div class="android-auto android-screen" style="width:100px;">
-              <a class="android-image-link" href="{{path('produit.showProduitsCC')}}">
-                <img class="android-screen-image" src="{{asset('images/commerce.png')}}" style="max-width:100px; max-height: 100px;" >
+            <div class="android-auto android-screen">
+              <a class="android-image-link" href="">
+                <img class="android-screen-image" src="{{asset('images/commerce.png')}}" >
               </a>
               <a class="android-link mdl-typography--font-regular mdl-typography--text-uppercase mdl-typography--text-left" href="">Centre Commercial</a>
             </div>
