--- a/src/View/nav_home.html.twig
+++ b/src/View/nav_home.html.twig
@@ -3,9 +3,7 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="{{asset('images/logo.png')}}" style="
-    width: 60px;
-    height: 60px;">
+            <img class="android-logo-image" src="images/android-logo.png">
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -71,7 +69,7 @@
               <div class="android-drawer-separator"></div>
               {% if app.session.get('logged') is defined and  app.session.get('logged') == 1 and app.session.get('droit') == 'Droit_Admin' %}
               <span class="mdl-navigation__link" href="">Admin Gestion</span>
-              <a class="mdl-navigation__link" href="">Users</a>
+              <a class="mdl-navigation__link" href="{{ path('user.showUser') }}">Users</a>
 
                   <a class="mdl-navigation__link" href="">Commandes</a>
                   <a class="mdl-navigation__link" href="">Produits</a>
@@ -86,4 +84,6 @@
               {% endif %}
               <div class="android-drawer-separator"></div>
           </nav>
+      </div>
+      <div class="android-content mdl-layout__content">
       </div>
