--- a/src/View/nav_home.html.twig
+++ b/src/View/nav_home.html.twig
@@ -71,8 +71,8 @@
               <span class="mdl-navigation__link" href="">Admin Gestion</span>
               <a class="mdl-navigation__link" href="{{ path('user.showUser') }}">Users</a>
 
-                  <a class="mdl-navigation__link" href="">Commandes</a>
-                  <a class="mdl-navigation__link" href="">Produits</a>
+                  <a class="mdl-navigation__link" href="{{ path("commande.admin") }}">Commandes</a>
+                  <a class="mdl-navigation__link" href="{{ path("produit.showProduitsA") }}">Produits</a>
               {% endif %}
               {% endif %}
               <span class="mdl-navigation__link" href="">Autres</span>
