bdd mofi + admin fini + inscription
il reste a tester finaliser puis commencer vendeur

--- a/src/View/Utilisateur/showDetailsCommandeClient.html.twig
+++ b/src/View/Utilisateur/showDetailsCommandeClient.html.twig
@@ -40,7 +40,9 @@
                 </a>
             </div>
         </div>
-
+        {% else %}
+            <h1>vous n'avez pas passer de commande</h1>
         {% endif %}
+
     </div>
 {% endblock %}
