--- a/src/View/Admin/Utilisateur/editPUtilisateur.html.twig
+++ b/src/View/Admin/Utilisateur/editPUtilisateur.html.twig
@@ -9,8 +9,8 @@
         <input class="mdl-textfield__input" name="id_utilisateur"  type="hidden" value="{{donnees.id_utilisateur}}">
 
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <label class="mdl-textfield__label" >MDP :</label>
-            <input class="mdl-textfield__input" name="password"  type="password"  value="{{donnees.password_utilisateur}}"  required>
+            <label class="mdl-textfield__label" >nouveau mot de passe :</label>
+            <input class="mdl-textfield__input" name="password"  type="password"   required>
         </div>
 
         <button> valider </button>
